properly convert hashtags

--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,11 @@
-NITTER_HOST=
-NITTER_HTTPS=
+SQLITE_FILE=dbs/db.db
+NITTER_HOST=nitter
+NITTER_HTTPS=false
 TWITTER_HANDLE=
 MASTODON_HOST=
 MASTODON_CLIENT_ID=
 MASTODON_CLIENT_SECRET=
 MASTODON_ACCESS_TOKEN=
+
+BURNER_TWITTER_USERNAME=
+BURNER_TWITTER_PASSWORD=
