support rss password for remote nitter instance

--- a/.example.nitterless.env
+++ b/.example.nitterless.env
@@ -1,7 +1,7 @@
+NITTER_HOST=
+NITTER_RSS_PASSWORD=
 TWITTER_HANDLE=
 MASTODON_HOST=
 MASTODON_CLIENT_ID=
 MASTODON_CLIENT_SECRET=
 MASTODON_ACCESS_TOKEN=
-BURNER_TWITTER_USERNAME=
-BURNER_TWITTER_PASSWORD=
